src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Not_England__c</fullName>
        <formula>IF(OR(Region__c = &quot;International&quot;,
Region__c = &quot;Northern Ireland&quot;,
Region__c = &quot;Scotland&quot;,
Region__c = &quot;Wales&quot;,
Region__c = &quot;Antrim&quot;,
Region__c = &quot;Ards&quot;,
Region__c = &quot;Armagh&quot;,
Region__c = &quot;Ballymena&quot;,
Region__c = &quot;Ballymoney&quot;,
Region__c = &quot;Banbridge&quot;,
Region__c = &quot;Belfast&quot;,
Region__c = &quot;Carrickfergus&quot;,
Region__c = &quot;Castlereagh&quot;,
Region__c = &quot;Coleraine&quot;,
Region__c = &quot;Cookstown&quot;,
Region__c = &quot;Craigavon&quot;,
Region__c = &quot;Derry&quot;,
Region__c = &quot;Down&quot;,
Region__c = &quot;Dungannon&quot;,
Region__c = &quot;Fermanagh&quot;,
Region__c = &quot;Larne&quot;,
Region__c = &quot;Limavady&quot;,
Region__c = &quot;Lisburn&quot;,
Region__c = &quot;Magherafelt&quot;,
Region__c = &quot;Moyle&quot;,
Region__c = &quot;Newry and Mourne&quot;,
Region__c = &quot;Newtownabbey&quot;,
Region__c = &quot;North Down&quot;,
Region__c = &quot;Omagh&quot;,
Region__c = &quot;Strabane&quot;,
Region__c = &quot;Aberdeen City&quot;,
Region__c = &quot;Aberdeenshire&quot;,
Region__c = &quot;Angus&quot;,
Region__c = &quot;Argyll and Bute&quot;,
Region__c = &quot;Clackmannanshire&quot;,
Region__c = &quot;Dumfries and Galloway&quot;,
Region__c = &quot;Dundee City&quot;,
Region__c = &quot;East Ayrshire&quot;,
Region__c = &quot;East Dunbartonshire&quot;,
Region__c = &quot;East Lothian&quot;,
Region__c = &quot;East Renfrewshire&quot;,
Region__c = &quot;Edinburgh, City of&quot;,
Region__c = &quot;Eilean Siar&quot;,
Region__c = &quot;Falkirk&quot;,
Region__c = &quot;Fife&quot;,
Region__c = &quot;Glasgow City&quot;,
Region__c = &quot;Highland&quot;,
Region__c = &quot;Inverclyde&quot;,
Region__c = &quot;Midlothian&quot;,
Region__c = &quot;Moray&quot;,
Region__c = &quot;North Ayrshire&quot;,
Region__c = &quot;North Lanarkshire&quot;,
Region__c = &quot;Orkney Islands&quot;,
Region__c = &quot;Perth and Kinross&quot;,
Region__c = &quot;Renfrewshire&quot;,
Region__c = &quot;Scottish Borders, The&quot;,
Region__c = &quot;Shetland Islands&quot;,
Region__c = &quot;South Ayrshire&quot;,
Region__c = &quot;South Lanarkshire&quot;,
Region__c = &quot;Stirling&quot;,
Region__c = &quot;West Dunbartonshire&quot;,
Region__c = &quot;West Lothian&quot;,
Region__c = &quot;Blaenau Gwent&quot;,
Region__c = &quot;Bridgend&quot;,
Region__c = &quot;Caerphilly&quot;,
Region__c = &quot;Cardiff&quot;,
Region__c = &quot;Carmarthenshire&quot;,
Region__c = &quot;Ceredigion&quot;,
Region__c = &quot;Conwy&quot;,
Region__c = &quot;Denbighshire&quot;,
Region__c = &quot;Flintshire&quot;,
Region__c = &quot;Gwynedd&quot;,
Region__c = &quot;Isle of Anglesey&quot;,
Region__c = &quot;Merthyr Tydfil&quot;,
Region__c = &quot;Monmouthshire&quot;,
Region__c = &quot;Neath Port Talbot&quot;,
Region__c = &quot;Newport&quot;,
Region__c = &quot;Pembrokeshire&quot;,
Region__c = &quot;Powys&quot;,
Region__c = &quot;Rhondda, Cynon, Taff&quot;,
Region__c = &quot;Swansea&quot;,
Region__c = &quot;Torfaen&quot;,
Region__c = &quot;Vale of Glamorgan, The&quot;,
Region__c = &quot;Wrexham&quot;),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not England</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Stop_Count__c</fullName>
        <label>On Stop Count</label>
        <summaryFilterItems>
            <field>Client_Financial__c.On_Hold__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Financial__c.account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Stop__c</fullName>
        <formula>IF(On_Stop_Count__c &gt; 0 , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Early years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sixth Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further 16+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher / Multi-phase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <inlineHelpText>Auto-populated based on country. To be viewed after account in created.</inlineHelpText>
        <label>Phone Ext</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_1__c</fullName>
        <label>Region 1</label>
        <picklist>
            <picklistValues>
                <fullName>Classified</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <label>Region 2</label>
        <picklist>
            <controllingField>Region_1__c</controllingField>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_3__c</fullName>
        <label>Region 3</label>
        <picklist>
            <controllingField>Region_2__c</controllingField>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Group_if_applicable__c</fullName>
        <inlineHelpText>Please specify the school group if the school if part of a group i.e. GEMS education.</inlineHelpText>
        <label>School Group (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_ID_Text__c</fullName>
        <formula>TEXT( School_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_ID__c</fullName>
        <externalId>true</externalId>
        <label>School ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pupil Referral Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Changed_Date__c</fullName>
        <description>A field to track when the shipping address field has been changed.</description>
        <label>Shipping Address Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipping_Email_Address__c</fullName>
        <description>The email address belonging to the Shipping Contact for Zuora subscriptions</description>
        <label>Shipping Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shipping_First_Name__c</fullName>
        <description>The First Name of the Contact to receive paper deliveries for Zuora subscriptions</description>
        <label>Shipping First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Last_Name__c</fullName>
        <description>The Last Name of the Contact who will receive paper deliveries for Zuora Subscriptions</description>
        <label>Shipping Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <description>The telephone number belonging to the Shipping Contact for Zuora subscriptions</description>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Title__c</fullName>
        <description>To capture the salutation of the Shipping contact for Zuora subscriptions</description>
        <label>Shipping Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_by_Ad_Spend__c</fullName>
        <formula>IF( ISPICKVAL(Current_Rank_by_Ad_Spend__c, &quot;Top 20%&quot;), &quot;Tier 1&quot;,
IF( ISPICKVAL(Current_Rank_by_Ad_Spend__c, &quot;20% - 40%&quot;), &quot;Tier 2&quot;,
IF( ISPICKVAL(Current_Rank_by_Ad_Spend__c, &quot;40% - 60%&quot;), &quot;Tier 3&quot;,
IF( ISPICKVAL(Current_Rank_by_Ad_Spend__c, &quot;60% - 80%&quot;), &quot;Tier 4&quot;,
IF( ISPICKVAL(Current_Rank_by_Ad_Spend__c, &quot;80% - 100%&quot;), &quot;Tier 5&quot;,
&quot;&quot;)))))</formula>
        <label>Tier by Ad Spend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_by_Ads_Placed__c</fullName>
        <formula>IF( ISPICKVAL(Current_Rank_by_Ads_Placed__c, &quot;Top 20%&quot;), &quot;Tier 1&quot;, 
IF( ISPICKVAL(Current_Rank_by_Ads_Placed__c, &quot;20% - 40%&quot;), &quot;Tier 2&quot;, 
IF( ISPICKVAL(Current_Rank_by_Ads_Placed__c, &quot;40% - 60%&quot;), &quot;Tier 3&quot;, 
IF( ISPICKVAL(Current_Rank_by_Ads_Placed__c, &quot;60% - 80%&quot;), &quot;Tier 4&quot;, 
IF( ISPICKVAL(Current_Rank_by_Ads_Placed__c, &quot;80% - 100%&quot;), &quot;Tier 5&quot;, 
&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier by Ads Placed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Code__c</fullName>
        <label>VAT Code</label>
        <picklist>
            <picklistValues>
                <fullName>EU VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU VAT EXEMPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK CHARITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK UNIVERSITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT EXEMPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vat_Number__c</fullName>
        <label>Charity No/EU Vat No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
        <label>Account Trading Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A vendor must refer to a GLA for it to be used in making a posting. This association is inherited from the Accounting Dimension.</description>
        <label>Accounts Payable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Accounts Payable Control Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An appropriate accounts receivable (or trade debtors) general ledger account.</description>
        <label>Accounts Receivable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountName__c</fullName>
        <description>The name of the bank account</description>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountNumber__c</fullName>
        <description>The account number</description>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountReference__c</fullName>
        <description>The account reference, sometimes required for electronic transfers</description>
        <label>Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCity__c</fullName>
        <description>The city</description>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCountry__c</fullName>
        <description>The country</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankFax__c</fullName>
        <description>The fax number</description>
        <label>Bank Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankIBANNumber__c</fullName>
        <description>The IBAN number</description>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankName__c</fullName>
        <description>The name of the bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankPhone__c</fullName>
        <description>The bank phone number</description>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSWIFTNumber__c</fullName>
        <description>The SWIFT or similar number</description>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSortCode__c</fullName>
        <description>The sort code / bank identifier</description>
        <label>Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStateProvince__c</fullName>
        <description>The state / county / province</description>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankZipPostalCode__c</fullName>
        <description>The postal code</description>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 2</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 3</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(BillingStreet) &amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingState) &amp;&amp;
ISBLANK(BillingPostalCode) &amp;&amp;
ISBLANK(BillingCountry)) &amp;&amp;
c2g__CODAValidatedBillingStreet__c == BillingStreet &amp;&amp;
c2g__CODAValidatedBillingCity__c == BillingCity &amp;&amp;
c2g__CODAValidatedBillingState__c == BillingState &amp;&amp;
c2g__CODAValidatedBillingPostCode__c == BillingPostalCode &amp;&amp;
c2g__CODAValidatedBillingCountry__c == BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingMethod__c</fullName>
        <description>The billing method</description>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditAgency__c</fullName>
        <description>The name of the credit agency</description>
        <label>Credit Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the credit limit</description>
        <label>Credit Limit Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitReviewed__c</fullName>
        <description>The date when the limit was last reviewed</description>
        <label>Credit Limit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimit__c</fullName>
        <description>The credit limit in org currency</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The manager responsible for the credit details</description>
        <label>Credit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRatingReviewed__c</fullName>
        <description>The date the rating was last reviewed</description>
        <label>Credit Rating Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRating__c</fullName>
        <description>The rating given by the credit agency</description>
        <label>Credit Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditReference__c</fullName>
        <description>The reference at the credit agency</description>
        <label>Credit Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditStatus__c</fullName>
        <description>The current credit status. The picklist is user-definable</description>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Allowed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash with Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADefaultExpenseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default GLA on expense lines.</description>
        <label>Default Expense Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Default Expense Account)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>